ingress/ingress-v2.yml
apiVersion: v1
kind: Pod
metadata:
  name: pvc-user
  labels:
    app: pvc-user
spec:
  containers:
    - name: browser
      image: davutozcan/nodews:1
      volumeMounts:
        - mountPath: /opt/output
          name: output
    - name: worker
      image: busybox
      command: ["/bin/sh","-c"]
      volumeMounts:
        - mountPath: /opt/output
          name: output
      args:
        - while true;
          do echo $(date) >> /opt/output/$(date "+%Y-%m-%d_%H-%M-%S");
          sleep 10;
          done
  volumes:
    - name: output
      persistentVolumeClaim:
        claimName: demo-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: pvc-ui
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app: pvc-user
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: demo-ingress
  annotations:
    external-dns.alpha.kubernetes.io/hostname: web.craftdemo.online
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
    - host: web.craftdemo.online
      http:
        paths:
          - path: /
            backend:
              serviceName: pvc-ui
              servicePort: 80
